--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -196,7 +196,12 @@ body {
 	box-sizing: border-box;
 }
 
+.Column {
+	column-count: 2;
+}
+
 .Column_1 {
+	text-shadow: 2px 3px 3px #117da8;
 	float: left;  
 	width: 50%;
 	padding: 10px; 
@@ -206,6 +211,7 @@ body {
 }
 
 .Column_2 {
+	text-shadow: 2px 3px 3px #117da8;
 	float: left;
 	width: 50%;
 	padding: 10px;
@@ -215,11 +221,13 @@ body {
 }
 
 .Column_3 {
+	text-shadow: 2px 3px 3px #117da8;
 	float: left;
 	width: 50%;
 	padding: 10px;
 	padding-top: 3.5%;
-	height: 450px;
+	min-height: 450px;
+	max-height: 450px;
 	background-color: lightgray;
 }
 
@@ -289,10 +297,15 @@ img {
 
 /* Icon elements */
 .icon {
-    float: left;
     border-radius: 8px;
-    max-width: 25px;
-    max-height: 25px;
+    max-width: 125px;
+	max-height: 125px;
+	text-shadow: 2px 3px 3px #117da8;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+	height:100%;
+	column-fill: auto; 
 }
 
 /* Contact form */
