--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -201,7 +201,7 @@ body {
 }
 
 .Column_1 {
-	text-shadow: 2px 3px 3px #117da8;
+	text-shadow: 1px 2px 2px grey;
 	float: left;  
 	width: 50%;
 	padding: 10px; 
@@ -211,7 +211,7 @@ body {
 }
 
 .Column_2 {
-	text-shadow: 2px 3px 3px #117da8;
+	text-shadow: 1px 2px 2px grey;
 	float: left;
 	width: 50%;
 	padding: 10px;
@@ -221,7 +221,7 @@ body {
 }
 
 .Column_3 {
-	text-shadow: 2px 3px 3px #117da8;
+	text-shadow: 1px 2px 2px grey;
 	float: left;
 	width: 50%;
 	padding: 10px;
